Who got ripped off on their fare?

--- a/titanic_survival_exploration.ipynb
+++ b/titanic_survival_exploration.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "4      0  373450  8.05   NaN        S  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,6 +313,489 @@
     "\n",
     "full_data.loc[full_data[\"Name\"] == \"Allen, Mr. William Henry\", \"Name\"] = \"Alien, Mr. William Henry\"\n",
     "full_data[full_data[\"Name\"] == \"Alien, Mr. William Henry\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Who got ripped off on their tickets?\n",
+    "\n",
+    "These people paid the most for their tickets in first class, second class, and third class.\n",
+    "\n",
+    "### But did they survive?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First we divide the dataset into classes (1st class, 2nd class, and 3rd class)\n",
+    "\n",
+    "first_class = full_data[full_data[\"Pclass\"] == 1]\n",
+    "second_class = full_data[full_data[\"Pclass\"] == 2] \n",
+    "third_class = full_data[full_data[\"Pclass\"]== 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following people paid the most in 1st class for their tickets (but at least they all survived)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>258</th>\n",
+       "      <td>259</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Ward, Miss. Anna</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17755</td>\n",
+       "      <td>512.3292</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>679</th>\n",
+       "      <td>680</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cardeza, Mr. Thomas Drake Martinez</td>\n",
+       "      <td>male</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PC 17755</td>\n",
+       "      <td>512.3292</td>\n",
+       "      <td>B51 B53 B55</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>737</th>\n",
+       "      <td>738</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Lesurer, Mr. Gustave J</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17755</td>\n",
+       "      <td>512.3292</td>\n",
+       "      <td>B101</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PassengerId  Survived  Pclass                                Name  \\\n",
+       "258          259         1       1                    Ward, Miss. Anna   \n",
+       "679          680         1       1  Cardeza, Mr. Thomas Drake Martinez   \n",
+       "737          738         1       1              Lesurer, Mr. Gustave J   \n",
+       "\n",
+       "        Sex   Age  SibSp  Parch    Ticket      Fare        Cabin Embarked  \n",
+       "258  female  35.0      0      0  PC 17755  512.3292          NaN        C  \n",
+       "679    male  36.0      0      1  PC 17755  512.3292  B51 B53 B55        C  \n",
+       "737    male  35.0      0      0  PC 17755  512.3292         B101        C  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"The following people paid the most in 1st class for their tickets (but at least they all survived)\")\n",
+    "first_class.loc[first_class[\"Fare\"] == first_class[\"Fare\"].max()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following people paid the most in 2nd class for their tickets (and they all died [sad trombone])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>73</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Hood, Mr. Ambrose Jr</td>\n",
+       "      <td>male</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>S.O.C. 14879</td>\n",
+       "      <td>73.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>121</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Hickman, Mr. Stanley George</td>\n",
+       "      <td>male</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>S.O.C. 14879</td>\n",
+       "      <td>73.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385</th>\n",
+       "      <td>386</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Davies, Mr. Charles Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>S.O.C. 14879</td>\n",
+       "      <td>73.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>655</th>\n",
+       "      <td>656</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Hickman, Mr. Leonard Mark</td>\n",
+       "      <td>male</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>S.O.C. 14879</td>\n",
+       "      <td>73.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>665</th>\n",
+       "      <td>666</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Hickman, Mr. Lewis</td>\n",
+       "      <td>male</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>S.O.C. 14879</td>\n",
+       "      <td>73.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PassengerId  Survived  Pclass                         Name   Sex   Age  \\\n",
+       "72            73         0       2         Hood, Mr. Ambrose Jr  male  21.0   \n",
+       "120          121         0       2  Hickman, Mr. Stanley George  male  21.0   \n",
+       "385          386         0       2    Davies, Mr. Charles Henry  male  18.0   \n",
+       "655          656         0       2    Hickman, Mr. Leonard Mark  male  24.0   \n",
+       "665          666         0       2           Hickman, Mr. Lewis  male  32.0   \n",
+       "\n",
+       "     SibSp  Parch        Ticket  Fare Cabin Embarked  \n",
+       "72       0      0  S.O.C. 14879  73.5   NaN        S  \n",
+       "120      2      0  S.O.C. 14879  73.5   NaN        S  \n",
+       "385      0      0  S.O.C. 14879  73.5   NaN        S  \n",
+       "655      2      0  S.O.C. 14879  73.5   NaN        S  \n",
+       "665      2      0  S.O.C. 14879  73.5   NaN        S  "
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"The following people paid the most in 2nd class for their tickets (and they all died [sad trombone])\")\n",
+    "second_class.loc[second_class[\"Fare\"] == second_class[\"Fare\"].max()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following people paid the most in 2nd class for their tickets (and they all died [sad trombone])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>160</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sage, Master. Thomas Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>CA. 2343</td>\n",
+       "      <td>69.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>181</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sage, Miss. Constance Gladys</td>\n",
+       "      <td>female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>CA. 2343</td>\n",
+       "      <td>69.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>202</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sage, Mr. Frederick</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>CA. 2343</td>\n",
+       "      <td>69.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>324</th>\n",
+       "      <td>325</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sage, Mr. George John Jr</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>CA. 2343</td>\n",
+       "      <td>69.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>792</th>\n",
+       "      <td>793</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sage, Miss. Stella Anna</td>\n",
+       "      <td>female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>CA. 2343</td>\n",
+       "      <td>69.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>846</th>\n",
+       "      <td>847</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sage, Mr. Douglas Bullen</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>CA. 2343</td>\n",
+       "      <td>69.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>863</th>\n",
+       "      <td>864</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sage, Miss. Dorothy Edith \"Dolly\"</td>\n",
+       "      <td>female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>CA. 2343</td>\n",
+       "      <td>69.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PassengerId  Survived  Pclass                               Name     Sex  \\\n",
+       "159          160         0       3         Sage, Master. Thomas Henry    male   \n",
+       "180          181         0       3       Sage, Miss. Constance Gladys  female   \n",
+       "201          202         0       3                Sage, Mr. Frederick    male   \n",
+       "324          325         0       3           Sage, Mr. George John Jr    male   \n",
+       "792          793         0       3            Sage, Miss. Stella Anna  female   \n",
+       "846          847         0       3           Sage, Mr. Douglas Bullen    male   \n",
+       "863          864         0       3  Sage, Miss. Dorothy Edith \"Dolly\"  female   \n",
+       "\n",
+       "     Age  SibSp  Parch    Ticket   Fare Cabin Embarked  \n",
+       "159  NaN      8      2  CA. 2343  69.55   NaN        S  \n",
+       "180  NaN      8      2  CA. 2343  69.55   NaN        S  \n",
+       "201  NaN      8      2  CA. 2343  69.55   NaN        S  \n",
+       "324  NaN      8      2  CA. 2343  69.55   NaN        S  \n",
+       "792  NaN      8      2  CA. 2343  69.55   NaN        S  \n",
+       "846  NaN      8      2  CA. 2343  69.55   NaN        S  \n",
+       "863  NaN      8      2  CA. 2343  69.55   NaN        S  "
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"The following people paid the most in 2nd class for their tickets (and they all died [sad trombone])\")\n",
+    "third_class.loc[third_class[\"Fare\"] == third_class[\"Fare\"].max()]"
    ]
   },
   {
