--- a/titanic_survival_exploration.ipynb
+++ b/titanic_survival_exploration.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -170,6 +170,7 @@
    ],
    "source": [
     "# Import libraries necessary for this project\n",
+    "import math\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from IPython.display import display # Allows the use of display() for DataFrames\n",
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +296,7 @@
        "4      0  373450  8.05   NaN        S  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +449,7 @@
        "737    male  35.0      0      0  PC 17755  512.3292         B101        C  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +602,7 @@
        "665      2      0  S.O.C. 14879  73.5   NaN        S  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +789,7 @@
        "863  NaN      8      2  CA. 2343  69.55   NaN        S  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,6 +797,148 @@
    "source": [
     "print(\"The following people paid the most in 2nd class for their tickets (and they all died [sad trombone])\")\n",
     "third_class.loc[third_class[\"Fare\"] == third_class[\"Fare\"].max()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Survival Rates\n",
+    "\n",
+    "Kids are those passengers with an age less than 13.  Adults are 20 to 60.  Old people are over 60.  We look at each group and divide the number survivors by the number in that group.  That gives us a survival rate.\n",
+    "\n",
+    "## Which group was most likely to survive?\n",
+    "\n",
+    "The kids did best on surviving because they were fast and so small a lifeboat could carry many and they were so cute the adult dared put them all on lifeboats. You'll see it on the page.\n",
+    "\n",
+    "## Which group was least likely to survive?\n",
+    "\n",
+    "The old people; they were slow not-so-cute and big. You'll also see this on the page. Also adults were medium; they were fast, had cute faces but were big."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = full_data\n",
+    "kids = df[(df[\"Age\"] <= 13) & (df[\"Age\"] >= 0)]\n",
+    "len(kids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "528"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adults = df[(df[\"Age\"] <=60) & (df[\"Age\"] >=20)]\n",
+    "len(adults)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "old_people = df[(df[\"Age\"] >=60)]\n",
+    "len(old_people)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you were a kid on the Titanic, you had a 59% chance of surviving.\n"
+     ]
+    }
+   ],
+   "source": [
+    "kid_survivors = kids[kids[\"Survived\"] == 1]\n",
+    "kid_survival_rate = len(kid_survivors) / len(kids)\n",
+    "kid_survival_percentage = math.floor(kid_survival_rate * 100)\n",
+    "print(f\"If you were a kid on the Titanic, you had a {kid_survival_percentage}% chance of surviving.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you were an adult young or old on the Titanic, you had a 39% chance of surviving.\n"
+     ]
+    }
+   ],
+   "source": [
+    "adult_survivors = adults[adults[\"Survived\"] == 1]\n",
+    "adult_survival_rate = len(adult_survivors) / len(adults)\n",
+    "adult_survival_percentage = math.floor(adult_survival_rate * 100)\n",
+    "\n",
+    "print(f\"If you were an adult young or old on the Titanic, you had a {adult_survival_percentage}% chance of surviving.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you were an old person on the Titanic, you had a 26% chance of surviving.\n"
+     ]
+    }
+   ],
+   "source": [
+    "old_people_survivors = old_people[old_people[\"Survived\"] == 1]\n",
+    "old_people_survival_rate = len (old_people_survivors) / len(old_people)\n",
+    "old_people_survival_percentage = math.floor(old_people_survival_rate * 100)\n",
+    "print(f\"If you were an old person on the Titanic, you had a {old_people_survival_percentage}% chance of surviving.\")"
    ]
   },
   {
@@ -1583,9 +1726,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "Examining the survival statistics, the majority of males younger than 10 survived the ship sinking, whereas most males age 10 or older *did not survive* the ship sinking. Let's continue to build on our previous prediction: If a passenger was female, then we will predict they survive. If a passenger was male and younger than 10, then we will also predict they survive. Otherwise, we will predict they do not survive.  \n",
     "Fill in the missing code below so that the function will make this prediction.  \n",
@@ -1657,9 +1798,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "***\n",
     "Adding the feature **Age** as a condition in conjunction with **Sex** improves the accuracy by a small margin more than with simply using the feature **Sex** alone. Now it's your turn: Find a series of features and conditions to split the data on to obtain an outcome prediction accuracy of at least 80%. This may require multiple features and multiple levels of conditional statements to succeed. You can use the same feature multiple times with different conditions.   \n",
@@ -1809,5 +1948,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
